--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
 	
 	<div id="view-draft"></div>
 	<script src="https://www.gstatic.com/firebasejs/5.5.9/firebase.js"></script>
+	<script src="https://raw.githubusercontent.com/draftmaster/draftmaster.github.io/master/test.js"></script>
 </body>
