--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
 <meta charset="UTF-8"> 
+<head>
+<style>
+	div#view-draft {
+		border-width: 5px;
+		border-style: solid;
+		border-color: pink;
+	}
+
+	div.view-round {
+		border-width: 5px;
+		border-style: solid;
+		border-color: orange;
+	}
+	
+	div.view-match {
+		display: table-cell;
+		
+		padding-left: 10px;
+		padding-right: 10px;
+		
+		border-width: 2px;
+		border-style: solid;
+		border-color: red;
+	}
+	
+	div.view-roundButton {
+		display: table-cell;
+	}
+
+</style>
+</head>
 <body>
 	
 	<div id="header">
 		<button type="button" id="btn-newDraft">New Draft</button> 
-		<p>Number Players:</p>
-		<input type="text" id="input-numPlayers" name="numPlayers">
 	</div>
 	
 	
@@ -16,28 +45,136 @@
 /*
 Database handles data updates
 */
+function MatchData(data)
+{
+	var DELIMITER = ',';
+	
+	this.indexPlayer1 = -1;
+	this.indexPlayer2 = -1;
+	this.indexWinner = -1;
+	
+	this.serialize = function()
+	{
+		return this.indexPlayer1 + DELIMITER + this.indexPlayer2 + DELIMITER + this.indexWinner;
+	}
+	
+	this.fromSerializedString = function(str)
+	{
+		var splits = str.split(DELIMITER);
+		this.indexPlayer1 = splits[0];
+		this.indexPlayer2 = splits[1];
+		this.indexWinner = splits[2];
+	}
+	
+	this.print = function()
+	{
+		console.log(this.serialize());
+	}
+	
+	// constructor
+	if (data != undefined)
+	{
+		this.fromSerializedString(data);
+	}
+	return this;
+}
+
+function RoundData(data)
+{
+	var DELIMITER = '|';
+	
+	this.matches = []; // type MatchData
+	
+	this.serialize = function()
+	{
+		var str = "";
+		this.matches.forEach(function(el){
+			str += el.serialize() + DELIMITER;
+		});
+		return str;
+	}
+	
+	this.fromSerializedString = function(str)
+	{
+		var splits = str.split(DELIMITER);
+		for(var i = 0; i < splits.length; i++)
+		{
+			this.matches.push(new MatchData(splits[i]));
+		}
+	}
+	
+	this.print = function()
+	{
+		console.log(this.serialize());
+	}
+	
+	// constructor
+	if (data != undefined)
+	{
+		this.fromSerializedString(data);
+	}
+	return this;
+}
+
+function DraftData()
+{
+	this.players = [];
+	this.rounds = []; // RoundData
+	
+	this.serialize = function()
+	{
+		var str = '';
+		for(var i = 0; i < this.rounds.length; i++)
+		{
+			str += 'round' + i + '#' + this.rounds[i].serialize();
+		}
+		return str;
+	}
+	
+	this.fromSerializedString = function(str)
+	{
+		
+	}
+ 	
+	return this;
+}
 
 function DB()
 {
+	var COL_DRAFTS = "drafts";
+	var DOC_DRAFT = "1";
+	
 	// private
 	var fb = undefined;
 	
-	// public 
-	this.draftdata = {};
-	
-	this.newDraft = function(players)
+	this.loadDraftData = function()
 	{
-		draftdata = {
-			players: players,
-			results: []
-		}
+		fb.collection(COL_DRAFTS).doc(DOC_DRAFT).get().then(function(doc) {
+			if (doc.exists) {
+				draft.visualizeDraftData(doc.data());
+			} else {
+				createNewDraft();
+			}
+		}).catch(function(error) {
+			createNewDraft();
+		});
+	}
+	
+	this.newDraft = function(data)
+	{
+		fb.collection(COL_DRAFTS).doc(DOC_DRAFT).set(data)
+		.then(function() {
+			// TODO
+		}).catch(function(error) {
+			// TODO
+		});
 		
-		for(var r = 0; r < draft.numRounds(players.length); r++)
-		{
-			draftdata.results.push(new Array(players.length).fill(0));
-		}
-		
-		visualizeDraftData(this.draftdata);
+		draft.visualizeDraftData(data);
+	}
+	
+	this.updateDraft = function(data)
+	{
+		fb.collection(COL_DRAFTS).doc(DOC_DRAFT).update(data);
 	}
 	
 	this.init = function()
@@ -61,6 +198,7 @@ function DB()
 		  timestampsInSnapshots: true
 		});
 	}
+	
 
 	this.init();
 	return this;
@@ -69,90 +207,411 @@ function DB()
 database = DB();
 </script>
 <script>
+function DraftHeader(_data)
+{
+	var data = _data;
+	
+	return this;
+}
+
+/* 
+
+		MATCH VIEW
+
+*/
+
+function MatchView(context, _data)
+{
+	var match = _data;
+	var view = undefined;
+	var input = undefined;
+	
+	this.toHtml = function()
+	{
+		var name1 = match.player1 == -1 ? '?' : context.players[match.player1];
+		var name2 = match.player2 == -1 ? '?' : context.players[match.player2];
+		
+		var html = '<div class="view-match" id="view-match-' + match.id +'">';
+		html += '<p>' + name1 + ' vs. ' + name2 + '</p>';
+		html += '<input class="input-match-result" type="text" placeholder="Result" value="' + match.result + '">';
+		html += '</div>';
+		return html;
+	}
+	
+	this.onViewAdded = function()
+	{
+		view = document.getElementById('view-match-' + match.id);
+		input = view.getElementsByClassName('input-match-result')[0];
+		input.onchange = this.onInputChange;
+	}
+	
+	this.onInputChange = function()
+	{
+		match.result = input.value;
+		database.updateDraft(context);
+	}
+	
+	return this;
+}
+
+/* 
+
+		ROUND VIEW
+
+*/
+
+function RoundView(context, _data)
+{
+	var round = _data;
+	var view = undefined;
+	var viewMatches = [];
+	
+	var onBtnComplete = undefined;
+	
+	this.setOnBtnComplete = function(callback)
+	{
+		onBtnComplete = callback;
+	};
+	
+	this.toHtml = function()
+	{
+		viewMatches = [];
+		
+		var html = '<div class="view-round" id="view-round-' + round.id +'">';
+		for (var i = 0; i < round.matches.length; i++)
+		{
+			var match = new MatchView(context, round.matches[i]);
+			viewMatches.push(match);
+			html += match.toHtml();
+		}
+		
+		// attach button onRoundComplete
+		if (context.currentRoundId == round.id)
+		{
+			html += '<div class="view-roundButton"><button type="button" id="btn-roundComplete">Complete</button></div>';
+		}
+		
+		html += '</div>';
+		
+		return html;
+	}
+	
+	this.onViewAdded = function()
+	{
+		view = document.getElementById('view-round-' + round.id);
+		viewMatches.forEach(function(viewMatch){
+			viewMatch.onViewAdded();
+		});
+		
+		// configure button onRoundComplete
+		if (context.currentRoundId == round.id) 
+		{
+			document.getElementById('btn-roundComplete').onclick = function(){
+				if (onBtnComplete != undefined)
+				{
+					onBtnComplete();
+				}
+			};
+		}
+	}
+	
+	
+	return this;
+}
+
+/*
+
+		DRAFT DATA FUNCTIONS
+		
+*/
+
+// returns array [numMatchWinsPlayer1, numMatchWinsPlayer2]
+function parseMatchResult(matchData)
+{
+	var split = matchData.result.split(':');
+	return [parseInt(split[0]), parseInt(split[1])]
+}
+
+// returns array [numRoundWins, numMatchWins, numMatchLosses, [opponentIndices...]]
+function getStatsFromPlayerId(data, playerId)
+{
+	var score = [0, 0, 0, []];
+	for(var r = 0; r < data.currentRoundId; r++)
+	{
+		for(var m = 0; m < data.rounds[r].matches.length; m++)
+		{
+			var matchData = data.rounds[r].matches[m];
+			var result = parseMatchResult(matchData);
+			
+			var numWins = Math.max((matchData.player1 == playerId ? result[0] : 0), (matchData.player2 == playerId ? result[1] : 0));
+			var numLoss = Math.max((matchData.player1 == playerId ? result[1] : 0), (matchData.player2 == playerId ? result[0] : 0));
+			
+			score[0] += (numWins == 2 ? 1 : 0);
+			score[1] += numWins;
+			score[2] += numLoss;
+			
+			if (matchData.player1 == playerId) {
+				score[3].push(matchData.player2);
+			} else if (matchData.player2 == playerId) {
+				score[3].push(matchData.player1);
+			}
+		}
+	}
+	
+	return score;
+}
+
+// returns sorted player list, most wins ASC
+function getIntermediateResults(data)
+{
+	var results = [];
+	
+	// get results
+	for(var p = 0; p < data.players.length; p++)
+	{
+		results.push({
+			playerId: p,
+			score: getStatsFromPlayerId(data, p)
+		});
+	}
+	
+	// sort results 
+	results.sort(function(el1, el2){
+		if (el1.score[0] > el2.score[0] || el1.score[1] > el2.score[1] || el1.score[2] < el2.score[2]) {
+			return -1;
+		} else if(el1.score[0] < el2.score[0] || el1.score[1] < el2.score[1] || el1.score[2] > el2.score[2]) {
+			return 1;
+		} else {
+			return 0;
+		}
+	});
+	
+	return results;
+}
+
+function chooseNextMatch(results)
+{
+	// get next player
+	var resultp1 = results.shift();
+	
+	// EQUAL WINS candidates
+	var candidates = results.filter(resultC => !resultp1.score[3].includes(resultC.playerId) && resultp1.score[0] == resultC.score[0]);
+	// ONE WIN LESS candidates
+	if (candidates.length == 0){
+		candidates = results.filter(resultC => !resultp1.score[3].includes(resultC.playerId) && resultp1.score[0] == resultC.score[0] + 1);
+	}
+	
+	// choose random enemy from candidates
+	var opponent = candidates[0];
+	var match = {
+		pairing: [resultp1.playerId, opponent.playerId],
+		numWins: [resultp1.score[0], opponent.score[0]]
+	};
+	
+	// get index of selected opponent
+	var opponentIndex = -1;
+	for(var i = 0; i < results.length; i++){
+		if (results[i].playerId == opponent.playerId) {
+			opponentIndex = i;
+			break;
+		}
+	} 
+	
+	// remove candidate from players
+	results.splice(opponentIndex, 1);
+	return match;
+}
+
+// 
+function nextRound(data)
+{	
+	data.currentRoundId++;
+	var results = getIntermediateResults(data);
+	
+	if (data.currentRoundId < data.rounds.length) {
+		for (var m = 0; m < data.rounds[data.currentRoundId].matches.length; m++)
+		{
+			var match = chooseNextMatch(results);
+			data.rounds[data.currentRoundId].matches[m].player1 = match.pairing[0];
+			data.rounds[data.currentRoundId].matches[m].player2 = match.pairing[1];
+		}
+	}
+	
+	database.updateDraft(data);
+}
 
 
 /*
 
-Draft view
+		DRAFT VIEW
 User Interaction and database visualization
 
 */
-function Draft()
+
+function DraftView(_data)
 {
-	var setDraftView = function(html)
+	var draftdata = _data;
+	
+	var view = undefined; // draft view
+	var viewRounds = [];
+	
+	var onBtnRoundComplete = function()
 	{
-		document.getElementById("view-draft").innerHTML = html;
+		nextRound(draftdata);
+		_visualizeDraftData(draftdata);
 	}
 	
-	var getInputValueNumPlayers = function()
+	var _visualizeDraftData = function(data)
 	{
-		return document.getElementById("input-numPlayers").value;
+		draftdata = data;
+		this.view = document.getElementById('view-draft');
+		this.viewRounds = [];
+
+		var html = "";
+		for(var r = 0; r < data.rounds.length; r++)
+		{
+			var round = new RoundView(data, data.rounds[r]);
+			this.viewRounds.push(round);
+			html += round.toHtml();
+		}
+		
+		this.view.innerHTML = html;	
+		
+		// --- send onAddedEvent
+		this.viewRounds.forEach(function(viewRound){
+			viewRound.onViewAdded();
+		});
+		
+		// --- configure round complete button
+		if (draftdata.currentRoundId < draftdata.rounds.length) {
+			this.viewRounds[draftdata.currentRoundId].setOnBtnComplete(function(){onBtnRoundComplete();});
+		}
 	}
 	
-	this.numRounds = function(numPlayers)
-	{
-		return Math.ceil(Math.log2(numPlayers));
-	}
-
-	this.numPos1 = function(numPlayers)
-	{
-		return [1,2];
-	}
-
-	this.numPos2 = function(numPlayers)
-	{
-		var min = (Math.ceil(Math.log2(numPlayers) - 2))*2;
-		return [min, min+3];
-	}
-
 	this.onClickNewDraft = function()
 	{
-		var draftViewHtml = '<ul id="input-playerList">';
-		for (var p = 0; p < getInputValueNumPlayers(); p++)
-		{
-			draftViewHtml += '<li><input type="text"></li>';
-		}
-		
-		draftViewHtml += '</ul><button type="button" id="btn-confirmPlayers">Confirm</button>';
-		setDraftView(draftViewHtml);
-		
-		document.getElementById("btn-confirmPlayers").onclick = onClickConfirmPlayers;
-	}
-	
-	// creates player name list from input list
-	this.onClickConfirmPlayers = function()
-	{
-		var players = [];
-		var playerList = document.getElementById("input-playerList").children;
-		for(var i = 0; i < playerList.length; i++)
-		{
-			players.push(playerList[i].firstChild.value);
-		}
-		
-		database.newDraft(players);
+		database.newDraft(testDraftData());
 	}
 	
 	this.visualizeDraftData = function(data)
 	{
-		html = '<div>';
-		html += '</div>';
-		setDraftView(html);
-	}
-	
-	this.createMatchView = function(player1, player2)
-	{
-		
+		_visualizeDraftData(data);
 	}
 	
 	this.init = function()
 	{
-		document.getElementById("btn-newDraft").onclick = onClickNewDraft;
+		document.getElementById("btn-newDraft").onclick = this.onClickNewDraft;
+		
+		if (draftdata != undefined)
+		{			
+			this.visualizeDraftData(draftdata);
+		}
 	}
 	
 	this.init();
 	return this;
 }
 
-draft = Draft();
+var testDraftData = function(){return{
+	players: ["P1", "P2", "P3", "P4", "P5", "P6", "P7", "P8"],
+	currentRoundId: 0,
+	rounds: [
+		{
+			id: 0,
+			matches: [
+				{
+					id: 0,
+					player1: 0,
+					player2: 1,
+					result: ''
+				},
+				{
+					id: 1,
+					player1: 2,
+					player2: 3,
+					result: ''
+				},
+				{
+					id: 2,
+					player1: 4,
+					player2: 5,
+					result: ''
+				},
+				{
+					id: 3,
+					player1: 6,
+					player2: 7,
+					result: ''
+				}
+			]
+		},
+		{
+			id: 1,
+			matches: [
+				{
+					id: 4,
+					player1: -1,
+					player2: -1,
+					result: ''
+				},
+				{
+					id: 5,
+					player1: -1,
+					player2: -1,
+					result: ''
+				},
+				{
+					id: 6,
+					player1: -1,
+					player2: -1,
+					result: ''
+				},
+				{
+					id: 7,
+					player1: -1,
+					player2: -1,
+					result: ''
+				}
+			]
+		},
+		{
+			id: 2,
+			matches: [
+				{
+					id: 8,
+					player1: -1,
+					player2: -1,
+					result: ''
+				},
+				{
+					id: 9,
+					player1: -1,
+					player2: -1,
+					result: ''
+				},
+				{
+					id: 10,
+					player1: -1,
+					player2: -1,
+					result: ''
+				},
+				{
+					id: 11,
+					player1: -1,
+					player2: -1,
+					result: ''
+				}
+			]
+		}
+	]
+}};
+
+function createNewDraft()
+{
+	database.newDraft(testDraftData());
+}
+
+draft = new DraftView();
+database.loadDraftData();
 </script>
 </body>
