login status fix

--- a/index.html
+++ b/index.html
@@ -55,14 +55,7 @@ function DB()
 	}
 	
 	this.loginAsUser = function(email, pw){
-		firebase.auth().signInWithEmailAndPassword(email, pw)
-		.then(function(){
-			onSignedIn();
-		}).catch(function(error) {
-			var errorCode = error.code;
-			var errorMessage = error.message;
-			console.log(error);
-		});
+		return firebase.auth().signInWithEmailAndPassword(email, pw);
 	}
 	
 	this.getCurrentUser = function() {
