--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 	
 	
 	<div id="view-draft"></div>
+	<div id="view-score"></div>
 	
 	<script src="https://www.gstatic.com/firebasejs/5.5.9/firebase.js"></script>
 <script>
@@ -135,8 +136,6 @@ function DB()
 	this.init();
 	return this;
 }
-
-database = DB();
 </script>
 <script>
 function LoginView()
@@ -150,7 +149,7 @@ function LoginView()
 	var onLogInClick = function()
 	{
 		viewStatus.innerHTML = 'logging in ...';
-		database.loginAsUser(inputUsername.value + usernameToEmail, inputPassword.value)
+		Main.database.loginAsUser(inputUsername.value + usernameToEmail, inputPassword.value)
 		.then(onSignedIn)
 		.catch(onError);
 	}
@@ -158,7 +157,7 @@ function LoginView()
 	var onSingUpClick = function()
 	{
 		viewStatus.innerHTML = 'signing up ...';
-		database.createNewUser(inputUsername.value + usernameToEmail, inputPassword.value)
+		Main.database.createNewUser(inputUsername.value + usernameToEmail, inputPassword.value)
 		.then(onSignedIn)
 		.catch(onError);
 	}
@@ -191,9 +190,6 @@ function LoginView()
 	
 	return this;
 }
-</script>
-<script>
-
 </script>
 <script>
 /*
@@ -365,7 +361,7 @@ function MatchView(context, _data)
 	this.onInputChange = function()
 	{
 		match.result = input.value;
-		database.updateDraft(context);
+		Main.database.updateDraft(context);
 	}
 	
 	return this;
@@ -554,7 +550,7 @@ function nextRound(data)
 		}
 	}
 	
-	database.updateDraft(data);
+	Main.database.updateDraft(data);
 }
 
 
@@ -584,7 +580,7 @@ function DraftView(_data)
 		this.view = document.getElementById('view-draft');
 		this.viewRounds = [];
 
-		var html = "";
+		var html = '';
 		for(var r = 0; r < data.rounds.length; r++)
 		{
 			var round = new RoundView(data, data.rounds[r]);
@@ -607,9 +603,7 @@ function DraftView(_data)
 	
 	this.onClickNewDraft = function()
 	{
-		database.deleteDraft().then(function(){
-			loadDraftOrCreateNew();
-		});
+		deleteCurrentDraft();
 	}
 	
 	this.visualizeDraftData = function(data)
@@ -632,24 +626,50 @@ function DraftView(_data)
 }
 </script>
 <script>
+function ScoreboardView()
+{
+	
+	this.toHtml = function()
+	{
+		var html = '';
+		
+		return html;
+	}
+	
+	this.onViewAdded = function()
+	{
+		
+	}
+	
+	return this;
+}
+</script>
+<script>
+function Main() 
+{	
+	Main.database = DB();
+	Main.loginView = new LoginView();
+	Main.newDraftView = new NewDraftView();
+	Main.draftView = new DraftView();
+	Main.scoreboardView = new ScoreboardView();
+	setTimeout(onInitialised, 1000);
+}
 
 function showLoginView()
 {
-	var login = new LoginView();
-	document.getElementById('view-draft').innerHTML = login.toHtml();
-	login.onViewAdded();		
+	document.getElementById('view-draft').innerHTML = Main.loginView.toHtml();
+	Main.loginView.onViewAdded();		
 }
 
 function showNewDraftView()
 {
-	var newDraftView = new NewDraftView();
-	document.getElementById('view-draft').innerHTML = newDraftView.toHtml();
-	newDraftView.onViewAdded();
+	document.getElementById('view-draft').innerHTML = Main.newDraftView.toHtml();
+	Main.newDraftView.onViewAdded();
 }
 
 function onInitialised()
 {
-	var user = database.getCurrentUser();
+	var user = Main.database.getCurrentUser();
 	if (user == undefined) {	
 		showLoginView();
 	} else {
@@ -664,11 +684,9 @@ function onSignedIn()
 
 function loadDraftOrCreateNew()
 {
-	draft = new DraftView();
-	
-	database.loadDraftData().then(function(doc) {
+	Main.database.loadDraftData().then(function(doc) {
 		if (doc.exists) {
-			draft.visualizeDraftData(doc.data());
+			Main.draftView.visualizeDraftData(doc.data());
 		} else {
 			showNewDraftView();
 		}
@@ -677,16 +695,23 @@ function loadDraftOrCreateNew()
 	});
 }
 
+function deleteCurrentDraft()
+{	
+	Main.database.deleteDraft().then(function(){
+		loadDraftOrCreateNew();
+	});
+}
+
 function initNewDraft(newDraftData)
 {
-	database.newDraft(newDraftData)
+	Main.database.newDraft(newDraftData)
 	.then(function() {
-		draft.visualizeDraftData(newDraftData);	
+		Main.draftView.visualizeDraftData(newDraftData);	
 	}).catch(function(error) {
 		console.log(error);
 	});
 }
 
-setTimeout(onInitialised, 1000);
+Main();
 </script>
 </body>
