--- a/index.html
+++ b/index.html
@@ -474,6 +474,17 @@ function getStatsFromPlayerId(data, playerId)
 	return score;
 }
 
+function compareMatchScores(el1, el2)
+{
+	if (el1.score[0] > el2.score[0] || el1.score[1] > el2.score[1] || el1.score[2] < el2.score[2]) {
+		return -1;
+	} else if(el1.score[0] < el2.score[0] || el1.score[1] < el2.score[1] || el1.score[2] > el2.score[2]) {
+		return 1;
+	} else {
+		return 0;
+	}
+}
+
 // returns sorted player list, most wins ASC
 function getIntermediateResults(data)
 {
@@ -489,15 +500,7 @@ function getIntermediateResults(data)
 	}
 	
 	// sort results 
-	results.sort(function(el1, el2){
-		if (el1.score[0] > el2.score[0] || el1.score[1] > el2.score[1] || el1.score[2] < el2.score[2]) {
-			return -1;
-		} else if(el1.score[0] < el2.score[0] || el1.score[1] < el2.score[1] || el1.score[2] > el2.score[2]) {
-			return 1;
-		} else {
-			return 0;
-		}
-	});
+	results.sort(compareMatchScores);
 	
 	return results;
 }
@@ -650,9 +653,15 @@ function ScoreboardView()
 		var results = getIntermediateResults(draftdata);
 		
 		var html = '';
+		var rank = 1;
 		for(var i = 0; i < results.length; i++)
 		{
-			html += '<p>' + (i+1) + ': ' + draftdata.players[results[i].playerId] + ': ';
+			if(i>0 && compareMatchScores(results[i], results[i-1]) != 0)
+			{
+				rank++;
+			}
+			
+			html += '<p>' + rank + ': ' + draftdata.players[results[i].playerId] + ': ';
 			html += results[i].score[0] + ' | ' + results[i].score[1] + ' | ' + results[i].score[2] + '</p>';
 		}
 		
