--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <meta charset="UTF-8"> 
 <head>
 <style>
-	body {
-		padding: 5px;	
+	body {	
+		width: 95%;
+		height: 95%;
 	}
 
+	
 	div#view-login {	
 		 position: relative;
-		 top: 35%;
-		 left: 35%;
+		 top: 25%;
+		 left: 40%;
 	}
 	
 	#view-login input {
@@ -16,6 +18,11 @@
 		width: 100%;
 		height: 10%;
 		font-size: 150%;
+	}
+	
+	#view-login button {
+		width: 50%;
+		height: 10%;
 	}
 
 	div#view-draft {
