--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <head>
 <style>
 	body {	
-		width: 95%;
-		height: 95%;
+		margin: 0;
+		padding: 0;
+		width: 100%;
+		height: 100%;
 	}
 
-	
 	div#view-login {	
 		 position: relative;
 		 top: 25%;
@@ -57,6 +58,7 @@
 		<button type="button" id="btn-newDraft">New Draft</button> 
 	</div>
 	
+	<p id="debug"></p>
 	
 	<div id="view-login"></div>
 	<div id="view-draft"></div>
@@ -711,7 +713,15 @@ function Main()
 	
 	Main.draftView.addOnDraftViewChangeListener(onDraftDataChange);
 	
+	window.onresize = onScreenResize;
+	onScreenResize();
+	
 	setTimeout(onInitialised, 1000);
+}
+
+function onScreenResize(event)
+{
+	document.getElementById('debug').innerHTML = window.innerWidth + "x" + window.innerHeight;
 }
 
 function showLoginView()
