--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 		background-color: #f9f9f9;
 	}
 
-	div#view-login {	
+	div#view-login {
 		position: relative;
 		padding: 20px;
-		max-width: 20%;
+		min-width: 20%;
+		max-width: 400px;
 		top: 15%;	
-		left: 35%;
+		margin: auto;
 		
 		border-radius: 5px;
 		border: 1px solid #d8dee2;
@@ -771,7 +772,7 @@ function showLoginView()
 {
 	var container = document.getElementById('view-login');
 	container.innerHTML = Main.loginView.toHtml();
-	container.style.display = 'inline-block';
+	container.style.display = 'block';
 	Main.loginView.onViewAdded();		
 }
 
