--- a/index.html
+++ b/index.html
@@ -240,8 +240,12 @@ function LoginView()
 		
 		if (isMobileDevice()) {
 			container.style.width = '80%';	
+			inputUsername.style.fontSize = '20px';
+			inputPassword.style.fontSize = '20px';
 		} else {
 			container.style.width = '25%';
+			inputUsername.style.fontSize = '14px';
+			inputPassword.style.fontSize = '14px';
 		}
 	}
 	
